cmake_minimum_required(VERSION 3.2)

PROJECT(luacrypto)
INCLUDE(cmake/ModuleImport.cmake)
LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(LUACRYPTO_VERSION_MAJOR "1")
SET(LUACRYPTO_VERSION_MINOR "0")
SET(LUACRYPTO_VERSION_PATCH "1")
SET(LUACRYPTO_VERSION "${LUACRYPTO_VERSION_MAJOR}.${LUACRYPTO_VERSION_MINOR}.${LUACRYPTO_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${LUACRYPTO_VERSION}")

ADD_DEFINITIONS(-DUSE_LUACRYPTO)
ADD_DEFINITIONS(-DLUA_COMPAT_MODULE -DLUA_COMPAT_APIINTCASTS)
OPTION(USE_LUACRYPTO_INNER "use lua inner" ON)
OPTION(USE_LUACRYPTO_TEST "use luacrypto test" ON)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

#ModuleImport("dmlog" "thirdparty/dmlog")

IF (WIN32)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/windows)
ENDIF(WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/dmcrypto)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/test)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/bin)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

IF (USE_LUACRYPTO_TEST)
    FILE(GLOB DMLUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.c
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/*.h
    )

    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "lua.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "luac.c$")
    LIST(FILTER DMLUA_SOURCES EXCLUDE REGEX "wmain.c$")

    FILE(GLOB LUA_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/lua/lua.c
    )
ENDIF(USE_LUACRYPTO_TEST)

FILE(GLOB LUACRYPTO_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto/*.h
)

FILE(GLOB DMCRYPTO_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/include/*.h

${CMAKE_CURRENT_SOURCE_DIR}/src/dmcrypto/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/src/dmcrypto/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/src/dmcrypto/*.c
${CMAKE_CURRENT_SOURCE_DIR}/src/dmcrypto/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/src/dmcrypto/*.h
)

FILE(GLOB_RECURSE LUACRYPTOTEST_SOURCES
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.cc
${CMAKE_CURRENT_SOURCE_DIR}/test/*.c
${CMAKE_CURRENT_SOURCE_DIR}/test/*.hpp
${CMAKE_CURRENT_SOURCE_DIR}/test/*.h)

IF (WIN32)
    IF (USE_LUACRYPTO_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_CORE")
        
        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53)
    ENDIF(USE_LUACRYPTO_INNER)

    ADD_LIBRARY(dmcrypto ${DMCRYPTO_SOURCES})

    ADD_LIBRARY(luacrypto SHARED ${LUACRYPTO_SOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/src/luacrypto/luacrypto_module.def)
    TARGET_LINK_LIBRARIES(luacrypto lua53 dmcrypto)

    SET_TARGET_PROPERTIES(luacrypto PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL -DLUA_LIB")

    IF (USE_LUACRYPTO_TEST)
        ADD_EXECUTABLE(luacryptotest ${LUACRYPTOTEST_SOURCES})
        TARGET_LINK_LIBRARIES(luacryptotest luacrypto)
        SET_TARGET_PROPERTIES(luacryptotest PROPERTIES COMPILE_FLAGS "-DLUA_BUILD_AS_DLL")
    ENDIF(USE_LUACRYPTO_TEST)
ELSEIF (APPLE)
    ADD_DEFINITIONS(-DLUA_USE_MACOSX)
    IF (USE_LUACRYPTO_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")

        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 dl)
    ENDIF(USE_LUACRYPTO_INNER)

    ADD_LIBRARY(dmcrypto ${DMCRYPTO_SOURCES})

    ADD_LIBRARY(luacrypto SHARED ${LUACRYPTO_SOURCES})
    SET_TARGET_PROPERTIES(luacrypto PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")

    TARGET_LINK_LIBRARIES(luacrypto lua53 dmcrypto)

    IF (USE_LUACRYPTO_TEST)
        ADD_EXECUTABLE(luacryptotest ${LUACRYPTOTEST_SOURCES})
        TARGET_LINK_LIBRARIES(luacryptotest luacrypto)
        SET_TARGET_PROPERTIES(luacryptotest PROPERTIES LINK_FLAGS "-Wl,-undefined -Wl,dynamic_lookup")
    ENDIF(USE_LUACRYPTO_TEST)
ELSEIF (UNIX)
    ADD_DEFINITIONS(-DLUA_USE_LINUX)

    IF (USE_LUACRYPTO_INNER)
        ADD_LIBRARY(lua53 SHARED ${DMLUA_SOURCES})
        SET_TARGET_PROPERTIES(lua53 PROPERTIES COMPILE_FLAGS "-Wl,-E" )

        ADD_EXECUTABLE(lua ${LUA_SOURCES})
        TARGET_LINK_LIBRARIES(lua lua53 m dl)
    ENDIF(USE_LUACRYPTO_INNER)

    ADD_LIBRARY(dmcrypto ${DMCRYPTO_SOURCES})

    ADD_LIBRARY(luacrypto SHARED ${LUACRYPTO_SOURCES})
    SET_TARGET_PROPERTIES(luacrypto PROPERTIES COMPILE_FLAGS "-Wl,-E" )
    SET_TARGET_PROPERTIES(luacrypto PROPERTIES PREFIX "")
    TARGET_LINK_LIBRARIES(luacrypto lua53 dmcrypto)
    set_property(TARGET tgt PROPERTY CXX_STANDARD 11)
    IF (USE_LUACRYPTO_TEST)
        ADD_EXECUTABLE(luacryptotest ${LUACRYPTOTEST_SOURCES})
        TARGET_LINK_LIBRARIES(luacryptotest luacrypto)
    ENDIF(USE_LUACRYPTO_TEST)
ENDIF ()

#ADD_CUSTOM_COMMAND(
#TARGET luacryptotest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:luacryptotest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS luacrypto
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(LUACRYPTO_LIBS "luacrypto")
#MARK_AS_ADVANCED(${LUACRYPTO_LIBS})
